# cNFT-Nif

./: .gitignore  Cargo.toml  README.md  mix.exs
doc/: settings.html
doc/cnftnif/setup/: index.html  struct.TreeManager.html
doc/trait.impl/core/marker/: trait.Send.js
doc/trait.impl/rustler/types/: trait.Encoder.js
docs/: crates.js  help.html  search-index.js  src-files.js
docs/cnftnif/: all.html  sidebar-items.js
docs/cnftnif/setup/: sidebar-items.js
docs/cnftnif/utils/: fn.base58_to_array.html  fn.convert_nodes.html  index.html  sidebar-items.js
docs/search.desc/cnftnif/: cnftnif-desc-0-.js
docs/src/cnftnif/: lib.rs.html  setup.rs.html
docs/trait.impl/core/clone/: trait.Clone.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Unpin.js
docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js
docs/trait.impl/rustler/types/: trait.Decoder.js
lib/: cnft_nif_entry_point.ex  cnft_project.ex
native/cnftnif/: Cargo.toml  README.md
native/cnftnif/docs/: lib.md  setup.md  utils.md
native/cnftnif/src/: lib.rs  setup.rs  utils.rs
test/: cnft_project_test.exs
