[package]
name = "cnftnif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "cnftnif"
crate-type = ["cdylib"]

[dependencies]
mpl-bubblegum = "1.4.0"
rustler = "0.36.1"
solana-client = "1.14.0"
solana-program = "1.14.0"
solana-sdk = "1.14.0"
spl-account-compression = "0.4.2"
once_cell = "1.20.3"
bincode = "1.3.3"
serde = "1.0.219"
spl-merkle-tree-reference = "0.1.1"
borsh = "1.5.5"
anyhow = { version = "1.0.97", features = ["backtrace"] }
